AeroNoSQL-backend/aerodb-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aerodb-backend
  labels:
    name: aerodb-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      name: aerodb-backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: aerodb-backend
    spec:
      containers:
      - image: daanrsantiago/aerodb-backend:latest
        imagePullPolicy: IfNotPresent
        name: aerodb-backend-container
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
