AeroNoSQL-backend/aerodb-backend-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: aerodb-backend-loadbalancer
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: aerodb-backend
  type: LoadBalancer
