AeroNoSQL-backend/aerodb-backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aerodb-backend-nginx-ingress
spec:
  backend:
    serviceName: aerodb-backend-nodeport
    servicePort: 80
